# fastapi-server

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
src/: gemini_api.py  weather_api.py
