[project]
name = "fastapi-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "google-genai>=1.68.0",
    "python-dotenv>=1.2.2",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.1",
    "retry-requests>=2.0.0",
    "requests-cache>=1.3.1",
    "google-generativeai>=0.8.6",
    "requests>=2.32.5",
]
